# insight

./: .gitignore  CMakeLists.txt  LICENSE.md  build_all  clean  rebuild  run_test
.github/workflows/: build-and-test.yml
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt
examples/mnist/src/: main.cpp  mnist.cpp
examples/src/: mnist.cpp
include/: insight.h
include/Common/: activationfunction.h  mnist.h  parallelfor.h  types.h
include/NeuralNet/: functions.h  neuralnet.h
src/: insight.cpp
src/Matrix/: expr.h  expr_base.h  matrix.cpp  matrix.h  vector.cpp  vector.h  vectorview.cpp  vectorview.h
src/NeuralNet/: config.h  context.h  functions.cpp  matexpr.h  matexpr_base.h  matrix.cpp  matrix.h  neuralnet.cpp  neuron.cpp  neuron.h  state.h  stateaccess.h  vector.cpp  vector.h  vectorview.cpp  vectorview.h
test/: CMakeLists.txt
test/src/: main.cpp  matrixtest.cpp  neuralnettest.cpp  squaretest.cpp  vectortest.cpp
